--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,14 @@
   url = {https://www.R-project.org/},
 }
 
+@article{betancourt2017conceptual,
+  title={A conceptual introduction to {H}amiltonian {M}onte {C}arlo},
+  author={Betancourt, Michael},
+  journal={arXiv},
+  volume={1701.02434},
+  year={2017}
+}
+
 @article{blondel2021jaxopt,
   title={Efficient and Modular Implicit Differentiation},
   author={Blondel, Mathieu and Berthet, Quentin and Cuturi, Marco and Frostig, Roy
@@ -367,6 +375,16 @@
   organization = {Stan Project},
   url          = {https://mc-stan.org/docs/reference-manual/},
   urldate      = {2026-01-26}
+}
+
+@software{stan2024csp,
+  author       = {Stan Development Team},
+  title        = {CmdStanPy},
+  year         = {2024},
+  doi          = {10.5281/zenodo.5733022},
+  url          = {https://doi.org/10.5281/zenodo.5733022},
+  version      = {1.3.0},
+  note         = {Version 1.3.0}
 }
 
 @article{talts2018validating,
