repl plotly w. plotnine

--- a/references.bib
+++ b/references.bib
@@ -378,7 +378,7 @@
 }
 
 @software{stan2024csp,
-  author       = {Stan Development Team},
+  author       = {{Stan Development Team}},
   title        = {CmdStanPy},
   year         = {2024},
   doi          = {10.5281/zenodo.5733022},
